Simplify webring list, fix list-item cutoff
- CSS containment was cutting off nested list-item markers; increase
  their padding to compensate
- Remove nested <details> use, it was causing problems and was probably
  unnecessary

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -399,7 +399,7 @@ ul ul {
 	-webkit-hyphens: auto;
 	hyphens: auto;
 	margin: 0;
-	padding-left: 1em;
+	padding-left: 1.25em;
 }
 
 /* Save some space and paper by making the site nav and footer links
